[gd_scene load_steps=4 format=3 uid="uid://bfylbwt6uygdj"]

[ext_resource type="Script" path="res://World/Player/Player/UserInterface/Stove/staff_button.gd" id="1_ficge"]
[ext_resource type="Texture2D" uid="uid://d30i5wlgacql1" path="res://Assets/Images/inventory_icons/Food/baked catfish.png" id="2"]
[ext_resource type="Material" uid="uid://d1xh7kpl8jvj7" path="res://Assets/Themes/HideCollection.tres" id="3"]

[node name="staff_button" type="Control"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1008.0
offset_bottom = -584.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ficge")

[node name="button" type="TextureButton" parent="."]
material = ExtResource("3")
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture_normal = ExtResource("2")

[connection signal="mouse_entered" from="button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
